--- a/index.html
+++ b/index.html
@@ -88,7 +88,56 @@
 
          <!--==================== RECIPE ====================-->
          <section class="recipe section" id="recipe">
-            
+            <h2 class="section__title">Our Secret Recipe</h2>
+
+            <div class="recipe__container container grid">
+               <div class="recipe__image">
+                  <img src="assets/img/recipe-burger.png" alt="image" class="recipe__img">
+               </div>
+               <div class="recipe__data">
+                  <!-- Recipe card 1 -->
+                  <div class="recipe__card">
+                     <div class="recipe__box">
+                        <img src="assets/img/recipe-bread.png" alt="image">
+                     </div>
+                     <h3 class="recipe__title">Bread</h3>
+                     <p class="recipe__description">Fresh bread, baked to perfection.</p>
+                  </div>
+                      <!-- Recipe card 2 -->
+                  <div class="recipe__card">
+                     <div class="recipe__box">
+                        <img src="assets/img/recipe-cheese.png" alt="image">
+                     </div>
+                     <h3 class="recipe__title">Cheese</h3>
+                     <p class="recipe__description">Cheese for a fantastic and healthy future.
+                     </p>
+                  </div>
+                       <!-- Recipe card 3 -->
+                  <div class="recipe__card">
+                     <div class="recipe__box">
+                        <img src="assets/img/recipe-meat.png" alt="image">
+                     </div>
+                     <h3 class="recipe__title">Meat                  </h3>
+                     <p class="recipe__description">100% pure beef, big and meaty.</p>
+                  </div>
+                       <!-- Recipe card 4 -->
+                  <div class="recipe__card">
+                     <div class="recipe__box">
+                        <img src="assets/img/recipe-vegetable.png" alt="image">
+                     </div>
+                     <h3 class="recipe__title">Vegetables</h3>
+                     <p class="recipe__description">Vegetables full of the essence of nature and organic.</p>
+                  </div>
+                           <!-- Recipe card 5 -->
+                  <div class="recipe__card">
+                     <div class="recipe__box">
+                        <img src="assets/img/recipe-sauces.png" alt="image">
+                     </div>
+                     <h3 class="recipe__title">Sauces</h3>
+                     <p class="recipe__description">Fresh sauces, delicious for the palate.</p>
+                  </div>
+               </div>
+            </div>
          </section>
 
          <!--==================== POPULAR ====================-->
