--- a/index.html
+++ b/index.html
@@ -230,22 +230,40 @@
                         <h3 class="contact__title">Write Us</h3>
 
                         <div class="contact__social">
-                           <a href="" target="_blank">
+                           <a href="https://wa.me/qr/P5PV7IUHIKECA1" target="_blank">
                               <i class="ri-whatsapp-fill"></i>
                            </a>
-                           <a href="" target="_blank">
+                           <a href="https://www.facebook.com/profile.php?id=100085423506975&mibextid=ZbWKwL" target="_blank">
                               <i class="ri-facebook-circle-fill"></i>
                            </a>
-                           <a href="" target="_blank">
+                           <a href="t.me/SIQProva" target="_blank">
                               <i class="ri-telegram-fill"></i>
                            </a>
                         </div>
                      </div>
+
+                     <div>
+                        <h3 class="contact__title">Call Us and Order</h3>
+
+                        <address class="contact__info">
+                           +00-987-7654-321 <br>+11-012345
+                        </address>
+                     </div>
+                     <div>
+                        <h3 class="contact__title">Find us here</h3>
+
+                        <address class="contact__info">
+                           Lima - Sun City - Peru <br>
+                           Av. Moon #4321
+                        </address>
+                     </div>
                    </div>
                    <div class="contact__image">
-
+                     <img src="assets/img/contact-man.png" alt="image" class="contact__img">
                    </div>
                </div>
+               <img src="assets/img/sticker-burger.svg" alt="image" class="contact__sticker-1">
+               <img src="assets/img/sticker-soda.svg" alt="image" class="contact__sticker-2">
             </div>
             
          </section>
