designed footer and scrollup

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="nav__menu" id="nav-menu">
                  <ul class="nav__list">
                      <li>
-                        <a href="#home" class="nav__link">Home</a>
+                        <a href="#home" class="nav__link active-link">Home</a>
                      </li>
                      <li>
                         <a href="#recipe" class="nav__link">Recipe</a>
@@ -230,13 +230,13 @@
                         <h3 class="contact__title">Write Us</h3>
 
                         <div class="contact__social">
-                           <a href="https://wa.me/qr/P5PV7IUHIKECA1" target="_blank">
+                           <a href="https://web.whatsapp.com/" target="_blank">
                               <i class="ri-whatsapp-fill"></i>
                            </a>
-                           <a href="https://www.facebook.com/profile.php?id=100085423506975&mibextid=ZbWKwL" target="_blank">
+                           <a href="https://www.facebook.com/" target="_blank">
                               <i class="ri-facebook-circle-fill"></i>
                            </a>
-                           <a href="t.me/SIQProva" target="_blank">
+                           <a href="https://web.telegram.org/k/" target="_blank">
                               <i class="ri-telegram-fill"></i>
                            </a>
                         </div>
@@ -271,11 +271,37 @@
 
       <!--==================== FOOTER ====================-->
       <footer class="footer">
+         <div class="footer__container contauner grid">
+            <a href="#" class="footer__logo">Burger</a>
 
+            <div class="footer__contect grid">
+               <a href="" class="footer__link">Terms & Agreements</a>
+               <a href="" class="footer__link">Privacy Policy</a>
+
+               <div class="footer__social">
+                  <a href="https://www.facebook.com/" target="-blank">
+                     <i class="ri-facebook-circle-fill"></i>
+                  </a>
+                  <a href="https://www.instagram.com/" target="-blank">
+                     <i class="ri-instagram-fill"></i>
+                  </a>
+                  <a href="https://twitter.com/" target="-blank">
+                      <i class="ri-twitter-x-fill"></i>
+                  </a>
+               </div>
+
+            </div>
+         </div>
+            
+         <span class="footer__copy">
+            &#169; All Rights Reserved By SadiazBurger
+         </span>
       </footer>
 
       <!--========== SCROLL UP ==========-->
-      
+      <a href="#" class="scrollup" id="scroll-up">
+         <i class="ri-arrow-up-line"></i>
+      </a>
 
       <!--=============== SCROLLREVEAL ===============-->
       <script src=""></script>
