--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Responsive burger website - Bedimcode</title>
+      <title>SSDK Burger Website</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -24,7 +24,7 @@
                   <img src="assets/img/logo-burger.svg" alt="image">
                </div>
 
-               Burger
+               SSDK Burger
             </a>
             <div class="nav__menu" id="nav-menu">
                  <ul class="nav__list">
@@ -211,9 +211,9 @@
 
                   <p class="delivery__description">Place your order for your favorite burger and we will deliver it to your door in minutes, get in touch and don't leave hungry.</p>
                   <a href="#contact" class="button">Contact Now</a>
-                  <img src="/assets/img/sticker-glass.svg" alt="" class="delivery__sticker">
+                  <img src="/assets/img/sticker-glass.svg" alt="image" class="delivery__sticker">
 
-                  <img src="assets/img/delivery-burger.png" alt="" class="delivery__img">
+                  <img src="assets/img/delivery-burger.png" alt="image" class="delivery__img">
                </div>
             </div>
             
@@ -271,7 +271,7 @@
 
       <!--==================== FOOTER ====================-->
       <footer class="footer">
-         <div class="footer__container contauner grid">
+         <div class="footer__container container grid">
             <a href="#" class="footer__logo">Burger</a>
 
             <div class="footer__contect grid">
@@ -304,7 +304,7 @@
       </a>
 
       <!--=============== SCROLLREVEAL ===============-->
-      <script src=""></script>
+      <script src="assets/js/scrollreveal.min.js"></script>
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
