--- a/src/contact.html
+++ b/src/contact.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!--=============== FAVICON ===============-->
+     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+
+     <!--=============== REMIXICONS ===============-->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
     <title>Contact Us</title>
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
+
+    <!--  Contact Form -->
     <div class="container">
 
         <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
