--- a/src/contact.html
+++ b/src/contact.html
@@ -33,6 +33,63 @@
             </div>
             <button type="submit">Send</button>
         </form>
+
+        <!---   --->
+        <div class="container">
+            <section class="education-section">
+                <h1>Certificate</h1>
+                <div class="education-card">
+                    <div class="card-content">
+                        <h2>Udemy</h2>
+                        <p>PHP Tutorial Beginner To Advancced</p>
+                        <span class="date">2023 - 2024</span>
+                    </div>
+                    <div class="certification">
+                        <img src="/assets/img/PHP.jpg" alt="Certification Image" class="cert-img">
+                    </div>
+                </div>
+                <div class="education-card">
+                    <div class="card-content">
+                        <h2>Google Coursera</h2>
+                        <p>Fundational Of User Experience (UX) Design</p>
+                        <span class="date">2023 - 2024</span>
+                    </div>
+                    <div class="certification">
+                        <img src="/assets/img/google UX CER.png" alt="Certification Image" class="cert-img">
+                    </div>
+                </div>
+                <div class="education-card">
+                    <div class="card-content">
+                        <h2>HubSpot Academy</h2>
+                        <p>Digital Marketing</p>
+                        <span class="date">2023 - 2024</span>
+                    </div>
+                    <div class="certification">
+                        <img src="/assets/img/digital Marketing.png" alt="Certification Image" class="cert-img">
+                    </div>
+                </div>
+                <div class="education-card">
+                    <div class="card-content">
+                        <h2>Google Digital Academy (SkillShop)</h2>
+                        <p>AI-Powered Performance Ads</p>
+                        <span class="date">2023 - 2024</span>
+                    </div>
+                    <div class="certification">
+                        <img src="/assets/img/AI power cer.png" alt="Certification Image" class="cert-img">
+                    </div>
+                </div>
+                <div class="education-card">
+                    <div class="card-content">
+                        <h2>Google Digital Academy (SkillShop)</h2>
+                        <p>Fundational Of User Experience (UX) Design</p>
+                        <span class="date">2023 - 2024</span>
+                    </div>
+                    <div class="certification">
+                        <img src="/assets/img/Al powered shopping certi.png" alt="Certification Image" class="cert-img">
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
 </body>
 </html>
