--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                    <h1 class="home__title">Love Every <br> Burger</h1>
                    <p class="home__description">We serve the best burgers on the planet, paving the way for cooking and preparing hot, delicious burgers.
                    </p>
-                   <a href="#popular" class="button">Bite Now</a>
+                   <a href="src/bite/bite.html" class="button">Bite Now</a>
                    
                    <img src="assets/img/sticker-potatoes.svg" alt="image" class="home__sticker">
 
