added certified design

--- a/src/contact.html
+++ b/src/contact.html
@@ -68,6 +68,16 @@
                         <img src="/assets/img/Al powered shopping certi.png" alt="Certification Image" class="cert-img">
                     </div>
                 </div>
+                <div class="education-card">
+                    <div class="card-content">
+                        <h2>Google Digital Academy (SkillShop)</h2>
+                        <p>Fundational Of User Experience (UX) Design</p>
+                        <span class="date">2023 - 2024</span>
+                    </div>
+                    <div class="certification">
+                        <img src="/assets/img/Al powered shopping certi.png" alt="Certification Image" class="cert-img">
+                    </div>
+                </div>
             </section>
         </div>
     </div>
