--- a/src/contact.html
+++ b/src/contact.html
@@ -70,12 +70,12 @@
                 </div>
                 <div class="education-card">
                     <div class="card-content">
-                        <h2>Google Digital Academy (SkillShop)</h2>
-                        <p>Fundational Of User Experience (UX) Design</p>
+                        <h2>DeepLearning AI</h2>
+                        <p>Machine Learning</p>
                         <span class="date">2023 - 2024</span>
                     </div>
                     <div class="certification">
-                        <img src="/assets/img/Al powered shopping certi.png" alt="Certification Image" class="cert-img">
+                        <img src="/assets/img/ML Coursera.png" alt="Certification Image" class="cert-img">
                     </div>
                 </div>
             </section>
