--- a/src/contact.html
+++ b/src/contact.html
@@ -65,7 +65,7 @@
                         <span class="date">2023 - 2024</span>
                     </div>
                     <div class="certification">
-                        <img src="/assets/img/Al powered shopping certi.png" alt="Certification Image" class="cert-img">
+                        <img src="/assets/img/google UX CER.png" alt="Certification Image" class="cert-img">
                     </div>
                 </div>
                 <div class="education-card">
