--- a/src/contact.html
+++ b/src/contact.html
@@ -61,11 +61,11 @@
                 <div class="education-card">
                     <div class="card-content">
                         <h2>Google Digital Academy (SkillShop)</h2>
-                        <p>Fundational Of User Experience (UX) Design</p>
+                        <p>AI-Powered Shopping Ads</p>
                         <span class="date">2023 - 2024</span>
                     </div>
                     <div class="certification">
-                        <img src="/assets/img/google UX CER.png" alt="Certification Image" class="cert-img">
+                        <img src="/assets/img/Al powered shopping certi.png" alt="Certification Image" class="cert-img">
                     </div>
                 </div>
                 <div class="education-card">
