--- a/src/contact.html
+++ b/src/contact.html
@@ -62,7 +62,7 @@
                     <div class="card-content">
                         <h2>Google Digital Academy (SkillShop)</h2>
                         <p>AI-Powered Shopping Ads</p>
-                        <span class="date">2024 - 2025</span>
+                        <span class="date">2024</span>
                     </div>
                     <div class="certification">
                         <img src="/assets/img/Al powered shopping certi.png" alt="Certification Image" class="cert-img">
