--- a/src/contact.html
+++ b/src/contact.html
@@ -72,7 +72,7 @@
                     <div class="card-content">
                         <h2>DeepLearning AI</h2>
                         <p>Machine Learning</p>
-                        <span class="date">2024</span>
+                        <span class="date">2024 2025</span>
                     </div>
                     <div class="certification">
                         <img src="/assets/img/ML Coursera.png" alt="Certification Image" class="cert-img">
