--- a/src/contact.html
+++ b/src/contact.html
@@ -42,7 +42,7 @@
                     <div class="card-content">
                         <h2>HubSpot Academy</h2>
                         <p>Digital Marketing</p>
-                        <span class="date">2024 </span>
+                        <span class="date">2024 - 2025</span>
                     </div>
                     <div class="certification">
                         <img src="/assets/img/digital Marketing.png" alt="Certification Image" class="cert-img">
