--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                   <h2 class="section__title">Fast Delivery</h2>
 
                   <p class="delivery__description">Place your order for your favorite burger and we will deliver it to your door in minutes, get in touch and don't leave hungry.</p>
-                  <a href="src/contact.html" class="button">Contact Now</a>
+                  <a href="" class="button">Contact Now</a>
                   <img src="/assets/img/sticker-glass.svg" alt="image" class="delivery__sticker">
 
                   <img src="assets/img/delivery-burger.png" alt="image" class="delivery__img">
